# samuro2.0

./: .env_example  .gitignore  Dockerfile  README.md  TODO.md  bot.py  config.py  config_example.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py  tos.md
cogs/: example.py
db/: schema.sql  schemaSamuro.sql
db/migrations/: 1.sql
etc/: __init__.py  constants.py  perms_str.py  settings_static.py
etc/hots/: heroesdata_ru.json
etc/text/: role_buttons.py  settings.py  tags.py
extensions/: command_handler.py  dev.py  help.py  hots.py  misc.py  settings.py  test.py  troubleshooter.py
models/: __init__.py  bot.py  checks.py  components.py  context.py  db.py  db_user.py  errors.py  events.py  heroes.py  mod_actions.py  plugin.py  rolebutton.py  tag.py  timer.py  views.py
tests/: test_nexus.py
utils/: __init__.py  cache.py  db_backup.py  dictionaryapi.py  helpers.py  hots.py  nexuscompendium.py  ratelimiter.py  scheduler.py  tasks.py
