[tool.black]
line-length = 120
target-version = ["py310"]
include = ".*py$"

[tool.isort]
profile = "black"
force_single_line = true

[tool.poetry]
name = "samurobot"
version = "0.1.0" # I do not actually update this, lol
description = "Your friendly neighbourhood multi-purpose Discord bot."
authors = ["Fenrir <fenrir1121@gmail.com>"]
license = "GNU GPL-v3"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# Change dateparser to 1.1.1 due to broken dependency issue
dateparser = {git = "https://github.com/scrapinghub/dateparser.git", tag="v1.1.1"}
psutil = "^5.9.1"
Pillow = "^9.1.1"
asyncpg = "^0.26.0"
Levenshtein = "^0.18.1"
uvloop = {version = "==0.16.0", platform="linux"}
aiodns = "~=3.0"
Brotli = "~=1.0"
# kosu = {git = "https://github.com/hypergonial/kosu.git", branch="main"}
hikari = ">=2.0.0.dev108, <2.0.0.dev115"
hikari-lightbulb = "==2.3.1"
hikari-miru = "==2.0.4"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
httpx = "^0.24.1"


[tool.poetry.dev-dependencies]
black = "^22.6"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-aiohttp = "^1.0.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
asyncio_mode = "auto"
addopts = "-ra -s"
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["tests"]
xfail_strict = true
